overflow fix

--- a/assets/sass/core.sass
+++ b/assets/sass/core.sass
@@ -1,3 +1,6 @@
+html
+	overflow-y: hidden
+
 body, html
 	font-family: 'Dosis'
 	font-size: 1.3em
